--- a/popup.html
+++ b/popup.html
@@ -1,20 +1,69 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Auto Tab Grouper</title>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <style>
-    body { font-family: Arial, sans-serif; }
-    label { display: block; margin-top: 10px; }
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f8f9fa;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .container {
+      width: 400px;
+      max-width: 600px;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      padding: 20px;
+    }
+    .header {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .btn-custom {
+      display: block;
+      width: 100%;
+      text-align: left;
+      padding: 10px 15px;
+      margin-bottom: 10px;
+      border: none;
+      border-radius: 5px;
+      color: #fff;
+    }
+    .btn-custom.active {
+      background-color: #007bff;
+    }
+    .btn-custom.disabled {
+      background-color: #6c757d;
+    }
+    .btn-custom i {
+      margin-right: 10px;
+    }
   </style>
 </head>
 <body>
-  <h1>Auto Tab Grouper Settings</h1>
-  <label>
-    <input type="checkbox" id="pause"> Pause Grouping
-  </label>
-  <label>
-    <input type="checkbox" id="group-windows"> Group tabs across windows
-  </label>
+  <div class="container">
+    <div class="header">
+      <h1 class="mb-4">Auto Tab Grouper</h1>
+    </div>
+    <button id="pause" class="btn-custom disabled">
+      <i class="fas fa-pause"></i> Pause Grouping
+    </button>
+    <button id="group-windows" class="btn-custom disabled">
+      <i class="fas fa-columns"></i> Group tabs across windows
+    </button>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="popup.js"></script>
 </body>
 </html>
