tab url list + color picker

--- a/popup.html
+++ b/popup.html
@@ -54,15 +54,26 @@
     <div class="header">
       <h1 class="mb-4">Auto Tab Grouper</h1>
     </div>
+    <!-- Bestaande knoppen -->
     <button id="pause" class="btn-custom disabled">
       <i class="fas fa-pause"></i> Pause Grouping
     </button>
     <button id="group-windows" class="btn-custom disabled">
       <i class="fas fa-columns"></i> Group tabs across windows
     </button>
+
+    <hr>
+
+    <div id="groups-section">
+      <h3>Tab Groups</h3>
+
+    </div>
+    
+    <div id="tabs-display-section"></div>
   </div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+  <link rel="stylesheet" href="styles.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="popup.js"></script>
 </body>
