better button container

--- a/popup.html
+++ b/popup.html
@@ -18,7 +18,7 @@
     }
     .container {
       width: 400px;
-      max-width: 600px;
+      max-width: 400px;
       background: #fff;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -54,7 +54,8 @@
     <div class="header">
       <h1 class="mb-4">Auto Tab Grouper</h1>
     </div>
-    <!-- Bestaande knoppen -->
+    <hr>
+    <h3>Options</h3>
     <button id="pause" class="btn-custom disabled">
       <i class="fas fa-pause"></i> Pause Grouping
     </button>
@@ -63,12 +64,10 @@
     </button>
 
     <hr>
-
-    <div id="groups-section">
-      <h3>Tab Groups</h3>
-    </div>
     
-    <div id="tabs-display-section"></div>
+    <div id="groups-section">
+      <h3>Active Groups</h3>
+    </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
