--- a/popup.html
+++ b/popup.html
@@ -67,6 +67,7 @@
     
     <div id="groups-section">
       <h3>Active Groups</h3>
+      <div id="no-active-groups" style="display: none;">No active groups</div>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
