--- a/popup.html
+++ b/popup.html
@@ -27,7 +27,15 @@
       <h3>Active Groups</h3>
       <div id="no-active-groups" style="display: none;">No active groups</div>
     </div>
+
+
+    <div class="donation-section">
+      <a href="https://www.buymeacoffee.com/danielhouben" target="_blank">
+        <img src="https://www.buymeacoffee.com/assets/img/guidelines/download-assets-sm-1.svg" alt="Buy Me a Coffee" style="width: 150px;">
+      </a>
+    </div>
   </div>
+
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
   <link rel="stylesheet" href="styles.css">
