--- a/popup.html
+++ b/popup.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Auto Tab Grouper</title>
+  <title>Tab Organizer</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
   <div class="container">
     <div class="header">
-      <h1 class="mb-4">Auto Tab Grouper</h1>
+      <h1 class="mb-4">Tab Organizer</h1>
     </div>
     <hr>
     <h3>Options</h3>
@@ -19,6 +19,9 @@
     </button>
     <button id="group-windows" class="btn-custom disabled">
       <i class="fas fa-columns"></i> Group tabs across windows
+    </button>
+    <button id="merge-windows" class="btn-custom disabled">
+      <i class="fas fa-compress-arrows-alt"></i> Merge Windows
     </button>
 
     <hr>
